--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         }(document, window.posthog || []);
         posthog.init('phc_tYlEG7Vn1ySCMoc1EgDwDYqidKJWtfRiiIe3WLPfLp5', {
             api_host: 'https://us.i.posthog.com',
-            person_profiles: 'identified_only' // or 'always' to create profiles for anonymous users as well }) </script>
+            person_profiles: 'always' // or 'always' to create profiles for anonymous users as well }) </script>
 </head>
 
 <body class="bg-background text-foreground">
