Made some more template changes!

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,15 @@
                 <th>Standard Deviation Money</th>
             </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>{{ average_money }}</td>
+                <td>{{ q1_money }}</td>
+                <td>{{ median_money }}</td>
+                <td>{{ q3_money }}</td>
+                <td>{{ std_money }}</td>
+            </tr>
+        </tbody>
     </table>
 
     <table class="uk-table uk-table-striped uk-table-responsive">
