--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
+    <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
