--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     </script>
 </head>
 
-<body class="bg-background text-foreground bg-gradient-to-r from-sky-500 to-indigo-500">
+<body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
