--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,13 @@
 
     </table>
 
+
+    <div class="uk-background-cover uk-flex uk-flex-center uk-flex-middle uk-height-medium"
+        data-src="./images/evan_conrad.jpg" uk-img>
+        <h1>Evan Conrad</h1>
+    </div>
+
+
 </body>
 
 </html>
