--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
 
     <div class="uk-background-cover uk-flex uk-flex-center uk-flex-middle uk-height-medium"
         data-src="./images/evan_conrad.jpg" uk-img>
-        <h1>Evan Conrad</h1>
+        <h1 class = "text-2xl">Evan Conrad</h1>
     </div>
 
 
