--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         </tbody>
     </table>
     <br>
-    <div class="h-[50vmin] content-center">
+    <div class="h-[50vmin] flex justify-center items-center">
         <canvas id="stockChart"></canvas>
     </div>
 
