thanks to arnay for reporting this bug, bounty will be paid out tomorrow

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="text-center">
-        <input type="checkbox" id="toggleMin" checked>
+        <input type="checkbox" id="toggleMin">
         <label for="toggleMin">Min Money</label>
         <input type="checkbox" id="toggleMax" checked>
         <label for="toggleMax">Max Money</label>
