--- a/templates/index.html
+++ b/templates/index.html
@@ -87,12 +87,12 @@
         {% endfor %}
 
     </table>
-
+    <!-- 
 
     <div class="uk-background-cover uk-flex uk-flex-center uk-flex-middle uk-height-medium"
         data-src="./images/evan_conrad.jpg" uk-img>
         <h1 class="text-2xl">Evan Conrad</h1>
-    </div>
+    </div> -->
 
     <script>
         const ctx = document.getElementById('stockChart').getContext('2d');
