--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
             {% for col, row_ in zip(column_names, row) %}
             {% if col == link_column %}
             <td>
-                <a href="{{row_}}" class="uk-link-reset">
+                <a href="{{row_}}" class="uk-link-reset" target="_blank">
                     {{ row_ }}
                 </a>
             </td>
