--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,10 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <th>Miller Tracker</th>
+                        <td>{{ miller_location }}</td>
+                    </tr>
+                    <tr>
                         <th>Average Money</th>
                         <td>{{ average_money }}</td>
                     </tr>
@@ -105,7 +109,7 @@
             {% endfor %}
         </tr>
         {% for row in row_data %}
-        <tr>
+        <tr {% if "teachermiller" in row %}class="font-bold" {% endif %}>
             {% for col, row_ in zip(column_names, row) %}
             {% if col == link_column %}
             <td>
@@ -119,7 +123,6 @@
             {% endfor %}
         </tr>
         {% endfor %}
-
     </table>
     <!-- 
 
