--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,13 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <div class="flex flex-wrap justify-center items-start">
+    <div class="flex flex-wrap justify-center ">
         <!-- Chart Container -->
-        <div class="w-full md:w-1/2 p-4 h-full">
+        <div class="w-full md:w-1/2 p-4 h-full md:h-3/4">
             <canvas id="stockChart"></canvas>
         </div>
         <!-- Vertical Summary Statistics Table -->
-        <div class="w-full md:w-1/4 p-4">
+        <div class="w-full md:w-1/4 p-4 md:h-3/4">
             <table class="uk-table uk-table-striped uk-table-responsive">
                 <thead>
                     <tr>
@@ -79,7 +79,7 @@
             </table>
         </div>
         <!-- New section for stocks and their counts -->
-        <div class="w-full md:w-1/4 p-4">
+        <div class="w-full md:w-1/4 p-4 md:h-3/4">
             <div class="overflow-y-auto" style="max-height: 400px;">
                 <table class="uk-table uk-table-striped uk-table-responsive">
                     <thead>
