made some quick updates for clarity

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                 <tbody>
                     <tr>
                         <th>Miller Tracker</th>
-                        <td>{{ miller_location }}</td>
+                        <td>#{{ miller_location }}th place</td>
                     </tr>
                     <tr>
                         <th>Average Money</th>
