--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
     <p class="text-center text-xl">Code can be found at: <a
-            href="https://github.com/lelandstocks/lelandstocks.github.io"> LelandStocks</a></p>
+            href="https://github.com/lelandstocks/lelandstocks.github.io" class="underline text-blue-600 hover:text-blue-800 visited:text-purple-600"> LelandStocks</a></p>
     <div class="flex flex-wrap justify-center ">
         <!-- Chart Container -->
         <div class="w-full md:w-1/2 p-4 h-full md:h-3/4">
