--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,20 @@
 
 <head>
     <title>The Leaderboard of the Great Quicksilver Stock Exchange</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Used for styling the webpage without react-->
     <link rel="stylesheet" href="https://unpkg.com/franken-ui@1.1.0/dist/css/core.min.css" />
     <script src="https://unpkg.com/franken-ui@1.1.0/dist/js/core.iife.js" type="module"></script>
     <script src="https://unpkg.com/franken-ui@1.1.0/dist/js/icon.iife.js" type="module"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script> <!-- Used for detecting dark mode or not-->
+
+    <!-- Used for the charts-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
+
+    <!-- Used for detecting dark mode or not-->
+    <script>
         const htmlElement = document.documentElement;
 
         if (
@@ -24,17 +31,13 @@
 
         htmlElement.classList.add(localStorage.getItem("theme") || "uk-theme-zinc");
     </script>
+    <!-- Used for analytics-->
     <script>
         !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.crossOrigin = "anonymous", p.async = !0, p.src = s.api_host.replace(".i.posthog.com", "-assets.i.posthog.com") + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "init capture register register_once register_for_session unregister unregister_for_session getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty createPersonProfile opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing debug".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
         posthog.init('phc_tYlEG7Vn1ySCMoc1EgDwDYqidKJWtfRiiIe3WLPfLp5', {
             api_host: 'https://us.i.posthog.com', person_profiles: 'identified_only' // or 'always' to create profiles for anonymous users as well
         })
     </script>
-    <style>
-        a {
-            @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600
-        }
-    </style>
 </head>
 
 <body class="bg-background text-foreground">
@@ -43,7 +46,8 @@
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
     <p class="text-center text-xl">Code can be found at: <a
-            href="https://github.com/lelandstocks/lelandstocks.github.io" class="underline text-blue-600 hover:text-blue-800 visited:text-purple-600"> LelandStocks</a></p>
+            href="https://github.com/lelandstocks/lelandstocks.github.io"
+            class="underline text-blue-600 hover:text-blue-800 visited:text-purple-600"> LelandStocks</a></p>
     <div class="flex flex-wrap justify-center ">
         <!-- Chart Container -->
         <div class="w-full md:w-1/2 p-4 h-full md:h-3/4">
@@ -140,7 +144,7 @@
     </div> -->
 
     <script>
-        const ctx = document.getElementById('stockChart').getContext('2d');
+        const ctx = document.getElementById('stockChart');
 
         var labels = {{ labels | safe }};
         var min_monies = {{ min_monies | safe }};
@@ -165,51 +169,50 @@
                     label: 'Q1 Money',
                     data: q1_monies,
                     hidden: false,
+
                 },
                 {
                     label: 'Median Money',
                     data: median_monies,
                     hidden: false,
+
                 },
                 {
                     label: 'Q3 Money',
                     data: q3_monies,
                     hidden: false,
+
                 }
             ]
         };
         const config = {
             type: 'line',
             data: data,
-            responsive: true,
-            maintainAspectRatio: true,
-        }
+            options: {
+                plugins: {
+                    zoom: {
+                        zoom: {
+                            wheel: {
+                                enabled: true,
+                            },
+                            pinch: {
+                                enabled: true
+                            },
+                            mode: 'x',
+                        },
+                        pan: {
+                            enabled: true
+                        }
+                    },
+
+                }
+            }
+        };
 
         var myLineChart = new Chart(ctx, config);
-
-        // Function to toggle dataset visibility
-        function toggleDataset(index, isVisible) {
-            myLineChart.data.datasets[index].hidden = !isVisible;
-            myLineChart.update();
-        }
-
-        // Event listeners for checkboxes
-        document.getElementById('toggleMin').addEventListener('change', function () {
-            toggleDataset(0, this.checked);
-        });
-        document.getElementById('toggleMax').addEventListener('change', function () {
-            toggleDataset(1, this.checked);
-        });
-        document.getElementById('toggleQ1').addEventListener('change', function () {
-            toggleDataset(2, this.checked);
-        });
-        document.getElementById('toggleMedian').addEventListener('change', function () {
-            toggleDataset(3, this.checked);
-        });
-        document.getElementById('toggleQ3').addEventListener('change', function () {
-            toggleDataset(4, this.checked);
-        });
     </script>
+
+
 
 </body>
 
