--- a/templates/index.html
+++ b/templates/index.html
@@ -200,6 +200,15 @@
             type: 'line',
             data: data,
             options: {
+                animations: {
+      tension: {
+        duration: 1000,
+        easing: 'linear',
+        from: 1,
+        to: 0,
+        loop: true
+      }
+    },
                 maintainAspectRatio: false,
                 scales: {
                     x: {
