--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
                         easing: 'linear',
                         from: 1,
                         to: 0,
-                        loop: true
+                        loop: true,
                     }
                 },
                 maintainAspectRatio: false,
