--- a/templates/player.html
+++ b/templates/player.html
@@ -34,7 +34,13 @@
         const data = {
             labels: labels,
             datasets: [
-                
+                {
+                    label: 'Money',
+                    data: money,
+                    fill: false,
+                    borderColor: 'rgb(75, 192, 192)',
+                    tension: 0.1
+                }
             ]
         };
         const config = {
