--- a/templates/player.html
+++ b/templates/player.html
@@ -27,7 +27,7 @@
     
     
     <script>
-        const ctx = document.getElementById('stockChart');
+        const ctx = document.getElementById('playerChart');
 
         var labels = {{ labels | safe }};
         var money = {{ money | safe }};
