--- a/templates/player.html
+++ b/templates/player.html
@@ -18,11 +18,11 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-        <div class="w-full p-4 h-full flex chart-container">
-            <canvas id="playerChart"></canvas>
-        </div>
-    
-    
+    <div class="w-full p-4 h-vmin flex chart-container">
+        <canvas id="playerChart"></canvas>
+    </div>
+
+
     <script>
         const ctx = document.getElementById('playerChart');
 
