--- a/templates/player.html
+++ b/templates/player.html
@@ -18,7 +18,7 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <canvas id="playerChart" class = "h-full"></canvas>
+    <canvas id="playerChart" class = "h-[100vmax]"></canvas>
 
 
     <script>
