--- a/templates/player.html
+++ b/templates/player.html
@@ -18,8 +18,9 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <canvas id="playerChart"></canvas>
-
+    <div class = class = "h-[100%]">
+        <canvas id="playerChart"></canvas>
+    </div>
 
     <script>
         const ctx = document.getElementById('playerChart');
