--- a/templates/player.html
+++ b/templates/player.html
@@ -18,7 +18,7 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <div class = class = "h-[100%]">
+    <div class = "h-[100%]">
         <canvas id="playerChart"></canvas>
     </div>
 
