--- a/templates/player.html
+++ b/templates/player.html
@@ -18,7 +18,7 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <div class = "h-[80%]">
+    <div class = "h-full md:h-auto">
         <canvas id="playerChart"></canvas>
     </div>
 
