--- a/templates/player.html
+++ b/templates/player.html
@@ -25,7 +25,7 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <div class="h-full md:h-auto">
+    <div class="flex justify-center items-center">
         <canvas id="playerChart"></canvas>
     </div>
 
