--- a/templates/player.html
+++ b/templates/player.html
@@ -26,7 +26,7 @@
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
     <div class="h-full md:h-auto flex justify-center items-center">
-        <canvas id="playerChart"></canvas>
+        <canvas id="playerChart" class="mx-auto"></canvas>
     </div>
 
     <script>
