--- a/templates/player.html
+++ b/templates/player.html
@@ -13,9 +13,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
     <style>
         #playerChart {
-            width: 60% !important;
-            /* Allow height to scale based on content */
-            flex-grow: 1;
+            /* Remove or comment out existing styles */
+            /* width: 60% !important; */
+            /* flex-grow: 1; */
         }
     </style>
 </head>
@@ -25,8 +25,10 @@
     <br>
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
-    <div class="h-full md:h-auto flex justify-center items-center">
-        <canvas id="playerChart" class="mx-auto"></canvas>
+    <div class="flex justify-center">
+        <div class="w-3/5">
+            <canvas id="playerChart"></canvas>
+        </div>
     </div>
 
     <script>
