--- a/templates/player.html
+++ b/templates/player.html
@@ -11,7 +11,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
-
 </head>
 
 <body class="bg-background text-foreground">
@@ -20,8 +19,8 @@
     <p class="text-center text-xl">Last updated {{ update_time }}</p>
     <br>
     <div class="flex justify-center">
-        <div class="w-3/5">
-            <canvas id="playerChart"></canvas>
+        <div class="w-3/5 h-[60vh]">
+            <canvas id="playerChart" class="w-full h-full"></canvas>
         </div>
     </div>
 
