--- a/templates/player.html
+++ b/templates/player.html
@@ -28,9 +28,9 @@
     <div class="flex justify-center mt-8">
         <div class="w-4/5">
             <h2 class="text-2xl mb-4">Current Stock Holdings</h2>
-            <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 place-items-center justify-center auto-rows-auto">
+            <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
                 {% for stock in player_stocks %}
-                <div class="p-2 border rounded text-center bg-gray-100 w-24">
+                <div class="p-2 border rounded text-center bg-gray-100">
                     {{ stock }}
                 </div>
                 {% endfor %}
