--- a/templates/player.html
+++ b/templates/player.html
@@ -28,13 +28,27 @@
     <div class="flex justify-center mt-8">
         <div class="w-4/5">
             <h2 class="text-2xl mb-4">Current Stock Holdings</h2>
-            <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-                {% for stock in player_stocks %}
-                <div class="p-2 border rounded text-center bg-gray-100">
-                    {{ stock }}
-                </div>
-                {% endfor %}
-            </div>
+            <table class="w-full border-collapse table-auto">
+                <thead>
+                    <tr class="bg-gray-100">
+                        <th class="border px-4 py-2">Stock Ticker</th>
+                        <th class="border px-4 py-2">Money Invested</th>
+                        <th class="border px-4 py-2">Overall % Change</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for stock in player_stocks %}
+                    <tr class="hover:bg-gray-50">
+                        <td class="border px-4 py-2 text-center">{{ stock[0] }}</td>
+                        <td class="border px-4 py-2 text-center">${{ '{:,.2f}'.format(stock[1]) }}</td>
+                        <td class="border px-4 py-2 text-center 
+                            {% if stock[2] >= 0 %}text-green-600{% else %}text-red-600{% endif %}">
+                            {{ '{:+.2f}'.format(stock[2]) }}%
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 
