--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,20 @@
         <script
             src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.development.js"></script>
         <script>
-        // Dark mode detection script
+        // Updated dark mode script
         const htmlElement = document.documentElement;
-    
+        
+        function toggleDarkMode() {
+            if (htmlElement.classList.contains('dark')) {
+                htmlElement.classList.remove('dark');
+                localStorage.setItem('mode', 'light');
+            } else {
+                htmlElement.classList.add('dark');
+                localStorage.setItem('mode', 'dark');
+            }
+        }
+
+        // Initial dark mode setup
         if (
             localStorage.getItem("mode") === "dark" ||
             (!("mode" in localStorage) &&
@@ -34,7 +45,26 @@
         }
     
         htmlElement.classList.add(localStorage.getItem("theme") || "uk-theme-blue");
-    </script>
+        </script>
+        <style>
+            .theme-toggle {
+                background: none;
+                border: none;
+                padding: 8px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                color: inherit;
+            }
+            
+            .theme-toggle svg {
+                width: 20px;
+                height: 20px;
+            }
+            
+            html.dark .moon-icon { display: none; }
+            html:not(.dark) .sun-icon { display: none; }
+        </style>
         <!-- PostHog analytics script -->
         <script>
     !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.crossOrigin = "anonymous", p.async = !0, p.src = s.api_host.replace(".i.posthog.com", "-assets.i.posthog.com") + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "init capture register register_once register_for_session unregister unregister_for_session getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty createPersonProfile opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing debug".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
@@ -61,13 +91,23 @@
                         <a href="/" class="uk-navbar-item uk-logo"
                             style="font-size: 1.5rem; font-weight: bold;">LelandStocks</a>
                     </div>
-                    <div class="uk-navbar-right" style="flex: 0 1 auto;">
+                    <div class="uk-navbar-right" style="flex: 0 1 auto; display: flex; align-items: center;">
                         <ul class="uk-navbar-nav">
                             <li><a href="/players/teachermiller.html">Teacher
                                     Miller's Profile</a></li>
                         </ul>
+                        <button class="theme-toggle ml-4" onclick="toggleDarkMode()">
+                            <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+                            </svg>
+                            <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                            </svg>
+                        </button>
                     </div>
                 </div>
+            </div>
+        </nav>
             </div>
         </nav>
 
